# centerbv3

./: .env.example  .gitignore  README.md  Untitled  alembic.ini  center_mvp1.db  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  database_migrations.py  main.py  scheduler.py  security.py
scripts/: _inspect_db.py  add_team_workbench.py  audit_scrum_data.py  bootstrap_db.py  debug_scrum.py  drop_deprecated_feature_views.py  enrich_generic_projects.py  fix_test_members.py  fix_test_members2.py  fix_test_members3.py  migrate_communication_rules_from_legacy.py  migrate_legacy_capabilities.py  migrate_project_profiles.py  migrate_scrum_epics.py  migrate_scrum_to_v2.py  qa_live_smoke.py  qa_live_smoke_results.json  repair_and_upgrade_db.py  reset_and_seed_demo.py  seed_demo.py  seed_kanban_board_demo.py  seed_marketing360_demo.py  seed_marketing_kanban_demo.py  seed_scrum_demo.py  seed_scrum_duo.py  seed_scrum_pack.py  seed_scrum_rich.py  seed_studio_software_demos.py  seed_three_projects.py  split_workflow_templates.py  sync_scrum_views.py  validate_scrum_seed.py  verify_scrum.py  wipe_and_reseed_catalog.py
tests/: conftest.py  org_helpers.py  record_helpers.py  test_access.py  test_access_guards.py  test_attachments_upload.py  test_audit.py  test_auth.py  test_blocker_api_sync.py  test_blocker_status_sync.py  test_blockers_cascade.py  test_capabilities.py  test_cascade.py  test_ceremonies.py  test_comments.py  test_comments_thread.py  test_communication_dispatch.py  test_communication_rules.py  test_custom_roles.py  test_deletions.py  (+62 more)
(+273 files in other folders)
