[tool.poetry]
name = "center-backend"
version = "0.1.0"
description = "Center MVP1 — Backend API"
authors = ["Center Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = "^2.0"
alembic = "^1.14"
psycopg = { extras = ["binary"], version = "^3.2" }
pydantic = { extras = ["email"], version = "^2.10" }
pydantic-settings = "^2.6"
python-multipart = "^0.0.9"
PyJWT = "^2.9"
bcrypt = "^4.2"
python-dateutil = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
